5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4429/executions/1595_2895.log
== TEST (2019-03-30 13:13:42) 
-- CODE:
var1= float(input("Qual o valor unitario do jogo 1? "))
var2= float(input("Qual o valor unitario do jogo 2? "))
var3= float(input("Qual o valor unitario do jogo 3? "))
var4= float(input("Qual o valor unitario do jogo 4? "))
var5= float(input("Qual o valor unitario do jogo 5? "))
var6= float(input("Qual o valor unitario do jogo 6? "))
var7= float(input("Qual o valor unitario do jogo 7? "))
var8= float(input("Qual o valor unitario do jogo 8? "))


# Calculo do valor a ser pago, incluindo o frete:
total= ((var1+var2+var3+var4+var5+var6+var7+var8+)+(45))

# Impressao do valor total:
print(total)


-- ERROR:
File "XXXX", line 12
    total= ((var1+var2+var3+var4+var5+var6+var7+var8+)+(45))
                                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 13:14:06) 
-- CODE:
var1= float(input("Qual o valor unitario do jogo 1? "))
var2= float(input("Qual o valor unitario do jogo 2? "))
var3= float(input("Qual o valor unitario do jogo 3? "))
var4= float(input("Qual o valor unitario do jogo 4? "))
var5= float(input("Qual o valor unitario do jogo 5? "))
var6= float(input("Qual o valor unitario do jogo 6? "))
var7= float(input("Qual o valor unitario do jogo 7? "))
var8= float(input("Qual o valor unitario do jogo 8? "))


# Calculo do valor a ser pago, incluindo o frete:
total=((var1+var2+var3+var4+var5+var6+var7+var8+)+(45))

# Impressao do valor total:
print(total)


-- ERROR:
File "XXXX", line 12
    total=((var1+var2+var3+var4+var5+var6+var7+var8+)+(45))
                                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 13:14:29) 
-- CODE:
var1= float(input("Qual o valor unitario do jogo 1? "))
var2= float(input("Qual o valor unitario do jogo 2? "))
var3= float(input("Qual o valor unitario do jogo 3? "))
var4= float(input("Qual o valor unitario do jogo 4? "))
var5= float(input("Qual o valor unitario do jogo 5? "))
var6= float(input("Qual o valor unitario do jogo 6? "))
var7= float(input("Qual o valor unitario do jogo 7? "))
var8= float(input("Qual o valor unitario do jogo 8? "))


# Calculo do valor a ser pago, incluindo o frete:
total=((var1+var2+var3+var4+var5+var6+var7+var8+)+45)

# Impressao do valor total:
print(total)


-- ERROR:
File "XXXX", line 12
    total=((var1+var2+var3+var4+var5+var6+var7+var8+)+45)
                                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 13:15:05) 
-- CODE:
var1= float(input("Qual o valor unitario do jogo 1? "))
var2= float(input("Qual o valor unitario do jogo 2? "))
var3= float(input("Qual o valor unitario do jogo 3? "))
var4= float(input("Qual o valor unitario do jogo 4? "))
var5= float(input("Qual o valor unitario do jogo 5? "))
var6= float(input("Qual o valor unitario do jogo 6? "))
var7= float(input("Qual o valor unitario do jogo 7? "))
var8= float(input("Qual o valor unitario do jogo 8? "))


# Calculo do valor a ser pago, incluindo o frete:
total=((var1+var2+var3+var4+var5+var6+var7+var8)+45)

# Impressao do valor total:
print(total)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var4= float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 13:17:43) 
-- CODE:
var1= float(input("Qual qtd valor unitario do jogo ? "))
var2= float(input("Qual o valor unitario do jogo? "))
var3= float(input("Qual o valor do frete do jogo ? "))



# Calculo do valor a ser pago, incluindo o frete:
total=(var1+var2+var3)

# Impressao do valor total:
print(total)


-- OUTPUT:
135.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 13:18:09) 
-- CODE:
var1= float(input("Qual qtd valor unitario do jogo ? "))
var2= float(input("Qual o valor unitario do jogo? "))
var3= float(input("Qual o valor do frete do jogo ? "))



# Calculo do valor a ser pago, incluindo o frete:
total=(var1+var2+var3)

# Impressao do valor total:
print(total)


-- EXECUTION TIME:
0.192217
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
135.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
172.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
1542.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 13:19:46) 
-- CODE:
var1= float(int(input("Qual qtd valor unitario do jogo ? ")))
var2= float(int(input("Qual o valor unitario do jogo? ")))
var3= float(int(input("Qual o valor do frete do jogo ? ")))



# Calculo do valor a ser pago, incluindo o frete:
total=(var1+var2+var3)

# Impressao do valor total:
print(total)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var2= float(int(input()))
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 13:20:01) 
-- CODE:
var1= float(int(input("Qual qtd valor unitario do jogo ? ")))
var2= float(int(input("Qual o valor unitario do jogo? ")))
var3= float(int(input("Qual o valor do frete do jogo ? ")))



# Calculo do valor a ser pago, incluindo o frete:
total=(var1+var2+var3)

# Impressao do valor total:
print(total)


-- EXECUTION TIME:
0.244882
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2895/main.py", line 2, in <module>
    var2= float(int(input()))
ValueError: invalid literal for int() with base 10: '45.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 13:20:04) 
-- CODE:
var1= float(int(input("Qual qtd valor unitario do jogo ? ")))
var2= float(int(input("Qual o valor unitario do jogo? ")))
var3= float(int(input("Qual o valor do frete do jogo ? ")))



# Calculo do valor a ser pago, incluindo o frete:
total=(var1+var2+var3)

# Impressao do valor total:
print(total)


-- EXECUTION TIME:
0.141587
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2895/main.py", line 2, in <module>
    var2= float(int(input()))
ValueError: invalid literal for int() with base 10: '45.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 13:20:54) 
-- CODE:
var1= float(int(input("Qual qtd valor unitario do jogo ? ")))
var2= float(int(input("Qual o valor unitario do jogo? ")))
var3= float(int(input("Qual o valor do frete do jogo ? ")))



# Calculo do valor a ser pago, incluindo o frete:
total=((var1*var2)+var3)

# Impressao do valor total:
print(total)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var2= float(int(input()))
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 13:21:12) 
-- CODE:
var1= float(int(input("Qual qtd valor unitario do jogo ? ")))
var2= float(int(input("Qual o valor unitario do jogo? ")))
var3= float(int(input("Qual o valor do frete do jogo ? ")))



# Calculo do valor a ser pago, incluindo o frete:
total=((var1*var2)+var3)

# Impressao do valor total:
print(total)


-- EXECUTION TIME:
0.143532
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2895/main.py", line 2, in <module>
    var2= float(int(input()))
ValueError: invalid literal for int() with base 10: '45.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 13:21:37) 
-- CODE:
var1= float(input("Qual qtd valor unitario do jogo ? "))
var2= float(input("Qual o valor unitario do jogo? "))
var3= float(input("Qual o valor do frete do jogo ? "))



# Calculo do valor a ser pago, incluindo o frete:
total=((var1*var2)+var3)

# Impressao do valor total:
print(total)


-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 13:21:56) 
-- CODE:
var1= float(input("Qual qtd valor unitario do jogo ? "))
var2= float(input("Qual o valor unitario do jogo? "))
var3= float(input("Qual o valor do frete do jogo ? "))



# Calculo do valor a ser pago, incluindo o frete:
total=((var1*var2)+var3)

# Impressao do valor total:
print(total)


-- EXECUTION TIME:
0.107574
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 13:28:26) 
-- CODE:
qtd=float(input("digite a qtd:  ")
vu=float(input("digite o vu:  ")
frete=float(input("digite a frete:  ")

total=((qtd*vu)+frete)
print(total)



-- ERROR:
File "XXXX", line 2
    vu=float(input()
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 13:28:55) 
-- CODE:
qtd=float(input("digite a qtd: "))
vu=float(input("digite o vu: "))
frete=float(input("digite a frete: "))

total=((qtd*vu)+frete)
print(total)



-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 13:29:18) 
-- CODE:
qtd=float(input("digite a qtd: "))
vu=float(input("digite o vu: "))
frete=float(input("digite a frete: "))

total=((qtd*vu)+frete)
print(total)



-- EXECUTION TIME:
0.123151
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
